[gd_scene load_steps=15 format=2]

[ext_resource path="res://Sprites/Armas/Pico/picoprueba.png" type="Texture2D" id=1]
[ext_resource path="res://Fonts/new_dynamicfont.tres" type="FontFile" id=2]
[ext_resource path="res://Sprites/Menus/7-2.png" type="Texture2D" id=3]
[ext_resource path="res://Sprites/Menus/new_theme.tres" type="Theme" id=4]
[ext_resource path="res://Sprites/Menus/1-3.png" type="Texture2D" id=5]
[ext_resource path="res://Sprites/Menus/wasd.png" type="Texture2D" id=6]
[ext_resource path="res://Sprites/Menus/rkey.png" type="Texture2D" id=7]
[ext_resource path="res://Sprites/Menus/crystalmauler.png" type="Texture2D" id=8]
[ext_resource path="res://Sprites/Menus/flechitas.png" type="Texture2D" id=9]
[ext_resource path="res://Sprites/Menus/7-1.png" type="Texture2D" id=10]
[ext_resource path="res://Sprites/Menus/7-3.png" type="Texture2D" id=11]
[ext_resource path="res://Sprites/Objetos/AmbarRock.png" type="Texture2D" id=12]
[ext_resource path="res://Scripts/Instrucciones.gd" type="Script" id=13]
[ext_resource path="res://Sprites/Assets/black background.jpeg" type="Texture2D" id=14]

[node name="Instrucciones" type="Control"]
process_mode = 3
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 13 )

[node name="BlackBackground" type="Sprite2D" parent="."]
modulate = Color( 1, 1, 1, 0.501961 )
position = Vector2( 488, 318 )
scale = Vector2( 6.10667, 3.06222 )
texture = ExtResource( 14 )

[node name="Contenedor" type="Sprite2D" parent="."]
position = Vector2( 201, 406 )
scale = Vector2( 2, 1 )
texture = ExtResource( 5 )
offset = Vector2( 155, -119 )

[node name="Contenedor2" type="Control" parent="."]
offset_right = 1024.0
offset_bottom = 544.0
theme = ExtResource( 4 )

[node name="Flechitas" type="Sprite2D" parent="Contenedor2"]
position = Vector2( 367, 314 )
texture = ExtResource( 9 )

[node name="Controles" type="Label" parent="Contenedor2"]
offset_left = 81.0
offset_top = 114.0
offset_right = 450.0
offset_bottom = 158.0
theme = ExtResource( 4 )
theme_override_fonts/font = ExtResource( 2 )
text = "Controles"
align = 1
valign = 1
uppercase = true

[node name="Crystalmauler" type="Sprite2D" parent="Contenedor2"]
position = Vector2( 264, 196 )
scale = Vector2( 1, 0.6 )
texture = ExtResource( 8 )

[node name="Wasd" type="Sprite2D" parent="Contenedor2"]
position = Vector2( 156, 319 )
texture = ExtResource( 6 )

[node name="Movimiento" type="Label" parent="Contenedor2"]
offset_left = 204.0
offset_top = 241.0
offset_right = 336.0
offset_bottom = 267.0
text = "Movimiento"

[node name="Rkey" type="Sprite2D" parent="Contenedor2"]
position = Vector2( 268, 439 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 7 )

[node name="Recarga" type="Label" parent="Contenedor2"]
offset_left = 230.0
offset_top = 377.0
offset_right = 314.0
offset_bottom = 432.0
text = "Recarga
"
align = 1
valign = 1

[node name="instrucciones" type="Label" parent="Contenedor2"]
offset_left = 356.0
offset_top = 60.0
offset_right = 512.0
offset_bottom = 86.0
scale = Vector2( 2, 2 )
text = "INSTRUCCIONES"

[node name="Picoprueba" type="Sprite2D" parent="Contenedor2"]
position = Vector2( 781, 158 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 1 )

[node name="ArmasAutomatico" type="Label" parent="Contenedor2"]
offset_left = 589.0
offset_top = 203.0
offset_right = 973.0
offset_bottom = 287.0
text = "Tus armas apuntan y atacan a los enemigos mas cercanos de forma autom√°tica."
align = 1
valign = 1
autowrap = true

[node name="AmbarRock" type="Sprite2D" parent="Contenedor2"]
position = Vector2( 782, 341 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 12 )

[node name="RocasCura" type="Label" parent="Contenedor2"]
offset_left = 607.0
offset_top = 388.0
offset_right = 955.0
offset_bottom = 443.0
text = "Busca y destruye estas rocas para curarte."
align = 1
valign = 1
autowrap = true

[node name="btnAceptar" type="TextureButton" parent="Contenedor2"]
offset_left = 426.0
offset_top = 455.0
offset_right = 606.0
offset_bottom = 495.0
texture_normal = ExtResource( 10 )
texture_disabled = ExtResource( 11 )
texture_focused = ExtResource( 3 )

[node name="Label" type="Label" parent="Contenedor2/btnAceptar"]
offset_right = 179.0
offset_bottom = 26.0
text = "ACEPTAR"
align = 1
valign = 1
autowrap = true

[connection signal="pressed" from="Contenedor2/btnAceptar" to="." method="_on_btnAceptar_pressed"]
